--- a/src/app/entries/entries.component.html
+++ b/src/app/entries/entries.component.html
@@ -18,12 +18,16 @@
 
     <ng-container matColumnDef="Actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let element"><button mat-raised-button color="accent" (click)="updateEntry(element)"><b>Edit</b></button> <button mat-raised-button color="warn" style="margin-left: 1rem;" (click)="deleteEntry(element)"><b>Delete</b></button></td>
+      <td mat-cell *matCellDef="let element; let i = index;">
+      <button mat-raised-button color="accent" (click)="updateEntry(element)"><b>Edit</b></button>
+      <button mat-raised-button color="warn" style="margin-left: 1rem;" (click)="logDeleteIndex(i);deleteEntry(element)"><b>Delete</b></button>
+      <button mat-raised-button color="primary" style="margin-left: 1rem;" [routerLink]="['/details-entry', element.ID]"><b>Details</b></button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <!--<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>-->
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;let i = index" (click)="logIndex(i)"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;let i = index" (click)="logIndex(i)" [ngClass]="{'highlight': deleteRowIndexValue == i}"></tr>
 
   </table>
   <div class="entries-table-bottom-container">
