--- a/src/app/details-entry/details-entry.component.html
+++ b/src/app/details-entry/details-entry.component.html
@@ -20,6 +20,7 @@
     </mat-list>
   </mat-card-content>
     <mat-card-actions style="text-align: center;">
-      <button mat-button [routerLink]="'/'">Close</button>
+      <button mat-button [routerLink]="['/entries/page', pIndex]">Close</button>
     </mat-card-actions>
 </mat-card>
+
