--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,4 +2,7 @@
   <button mat-button routerLink="/">Home</button>
   <button mat-button routerLink="/entries">View Entries</button>
   <button mat-button routerLink="/new-entry">Create Entry</button>
+  <span style="width: 100%; text-align: right;">
+    <button mat-button routerLink="/register">Register</button>
+  </span>
 </mat-toolbar>
