--- a/src/app/details-entry/details-entry.component.css
+++ b/src/app/details-entry/details-entry.component.css
@@ -1,4 +1,10 @@
-mat-card {
-    width: 40%;
-    margin: 5% 30% 10% 30%;
+.mat-card {
+  width: 40%;
+  margin: 5% 30% 10% 30%;
+  padding: 0 !important;
+}
+.mat-card-header {
+  /*background-color: rebeccapurple !important;*/
+  /*padding: 5px !important;*/
+  /*color: white;*/
 }
