--- a/src/app/entries/entries.component.html
+++ b/src/app/entries/entries.component.html
@@ -1,43 +1,45 @@
-<p><div>
-  <table mat-table #table [dataSource]="dataSource" class="mat-elevation-z8">
+<p>
+  <div>
+    <table mat-table #table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <ng-container matColumnDef="Description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let element; let i = index;" [ngClass]="{'highlight': selectedRowIndexDesc == i}"> {{element.Description}} </td>
-    </ng-container>
+      <ng-container matColumnDef="Description">
+        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <td mat-cell *matCellDef="let element; let i = index;" [ngClass]="{'highlight': selectedRowIndexDesc == i}"> {{element.Description}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="IsExpense">
-      <th mat-header-cell *matHeaderCellDef> Type </th>
-      <td mat-cell *matCellDef="let element; let i = index;" [ngClass]="{'highlight': selectedRowIndexIsExpense == i}"> {{(element.IsExpense) ? 'Expense' : 'Income'}} </td>
-    </ng-container>
+      <ng-container matColumnDef="IsExpense">
+        <th mat-header-cell *matHeaderCellDef> Type </th>
+        <td mat-cell *matCellDef="let element; let i = index;" [ngClass]="{'highlight': selectedRowIndexIsExpense == i}"> {{(element.IsExpense) ? 'Expense' : 'Income'}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="Value">
-      <th mat-header-cell *matHeaderCellDef> Value </th>
-      <td mat-cell *matCellDef="let element; let i = index;" [ngClass]="{'highlight': selectedRowIndexValue == i}"> {{element.Value}} </td>
-    </ng-container>
+      <ng-container matColumnDef="Value">
+        <th mat-header-cell *matHeaderCellDef> Value </th>
+        <td mat-cell *matCellDef="let element; let i = index;" [ngClass]="{'highlight': selectedRowIndexValue == i}"> {{element.Value}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="Actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let element; let i = index;">
-      <button mat-raised-button color="accent" (click)="updateEntry(element)"><b>Edit</b></button>
-      <button mat-raised-button color="warn" style="margin-left: 1rem;" (click)="logDeleteIndex(i);deleteEntry(element)"><b>Delete</b></button>
-      <button mat-raised-button color="primary" style="margin-left: 1rem;" [routerLink]="['/details-entry', element.ID]"><b>Details</b></button>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="Actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let element; let i = index;">
+          <button mat-raised-button color="accent" (click)="logIndex(i);updateEntry(element)"><b>Edit</b></button>
+          <button mat-raised-button color="warn" style="margin-left: 1rem;" (click)="logDeleteIndex(i);deleteEntry(element)"><b>Delete</b></button>
+          <button mat-raised-button color="primary" style="margin-left: 1rem;" [routerLink]="['/details-entry', element.ID, pIndex]"><b>Details</b></button>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <!--<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>-->
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;let i = index" (click)="logIndex(i)" [ngClass]="{'highlight': deleteRowIndexValue == i}"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <!--<tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>-->
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;let i = index" (click)="logIndex(i)" [ngClass]="{'highlight': deleteRowIndexValue == i}"></tr>
 
-  </table>
-  <div class="entries-table-bottom-container">
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons
-                 aria-label="Select page"
-                 (page)="onPaginateChange($event)">
-  </mat-paginator>
+    </table>
+    
+    <div class="entries-table-bottom-container">
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                     showFirstLastButtons
+                     aria-label="Select page"
+                     (page)="onPaginateChange($event)">
+      </mat-paginator>
     </div>
   </div>
   <!--<button mat-raised-button color="primary">Click Me</button>-->
 
-
+  
